test/statements/elliot/loops/modifyIndicesLeaderFollower.good
modifyIndicesLeaderFollower.chpl:5: error: illegal lvalue in assignment
modifyIndicesLeaderFollower.chpl:6: error: illegal lvalue in assignment
